--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.19.0
 annotated-types==0.5.0
 anyio==3.7.1
 beautifulsoup4==4.12.2
@@ -5,8 +6,10 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
 colorama==0.4.6
+databases==0.8.0
 exceptiongroup==1.1.2
 fastapi==0.101.0
+greenlet==3.0.1
 h11==0.14.0
 idna==3.4
 pydantic==2.1.1
@@ -14,6 +17,7 @@ pydantic_core==2.4.0
 requests==2.31.0
 sniffio==1.3.0
 soupsieve==2.4.1
+SQLAlchemy==1.4.49
 starlette==0.27.0
 typing_extensions==4.7.1
 urllib3==2.0.4
